--- a/index.html
+++ b/index.html
@@ -40,36 +40,37 @@
                         </div>
                         <ul class="links">
                             <li>
-                                <a href="#"><i class="fa-regular fa-comments fa-fw"></i>Testimonials</a>
+                                <a href="#testimonials"><i class="fa-regular fa-comments fa-fw"></i>Testimonials</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-regular fa-user fa-fw"></i>Team Members</a>
+                                <a href="#members"><i class="fa-regular fa-user fa-fw"></i>Team Members</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-regular fa-building fa-fw"></i>Services</a>
+                                <a href="#services"><i class="fa-regular fa-building fa-fw"></i>Services</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-regular fa-circle-check fa-fw"></i>My Skills</a>
+                                <a href="#our-skills"><i class="fa-regular fa-circle-check fa-fw"></i>My Skills</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-regular fa-clipboard fa-fw"></i>How It Works</a>
+                                <a href="#work-steps"><i class="fa-regular fa-clipboard fa-fw"></i>How It Works</a>
                             </li>
                         </ul>
                         <ul class="links">
                             <li>
-                                <a href="#"><i class="fa-regular fa-calendar fa-fw"></i>Events</a>
+                                <a href="#events"><i class="fa-regular fa-calendar fa-fw"></i>Events</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-solid fa-hand-holding-dollar fa-fw"></i>Pricing Plans</a>
+                                <a href="#pricing"><i class="fa-solid fa-hand-holding-dollar fa-fw"></i>Pricing
+                                    Plans</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-regular fa-circle-play fa-fw"></i>Top Videos</a>
+                                <a href="#videos"><i class="fa-regular fa-circle-play fa-fw"></i>Top Videos</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-solid fa-chart-column fa-fw"></i>Stats</a>
+                                <a href="#stats"><i class="fa-solid fa-chart-column fa-fw"></i>Stats</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa-solid fa-percent fa-fw"></i>Request A Discount</a>
+                                <a href="#discount"><i class="fa-solid fa-percent fa-fw"></i>Request A Discount</a>
                             </li>
                         </ul>
                     </div>
